Resolves: fdo#88417 Dropdown for ruler settings should show radio buttons

This reverts commit 9995222d1141b326197a387cc7897b3971ce9e9a
and additionally converts the ruler settings to radio buttons and not
checkboxes

Conflicts:
	vcl/source/control/tabctrl.cxx

Change-Id: Ie0eac5f07729447942065b7f415398165fbf067c
(cherry picked from commit 251737f0dd186b0f169f5ba237e1e8c28a320e00)
Reviewed-on: https://gerrit.libreoffice.org/14017
Tested-by: David Tardon <dtardon@redhat.com>
Reviewed-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit 83cb667fe9ad08ccbb3621b982edcb6fa8e4ab38)